chore: commit changes before flattening

--- a/backend/dashboard/src/main/resources/application.properties
+++ b/backend/dashboard/src/main/resources/application.properties
@@ -11,3 +11,6 @@ websocket.allowed-origins=http://localhost:5173
 websocket.endpoint=/ws/ticks
 
 logging.level.com.zerodha.dashboard=INFO
+
+# Market adapter selection: mock or zerodha
+market.adapter=mock
