--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,20 +11,56 @@ jobs:
     runs-on: ubuntu-latest
     services:
       redis:
-        image: redis:7-alpine
+        image: redis:7.2.5-alpine
         ports:
           - 6379:6379
         options: >-
-          --health-cmd "redis-cli ping" --health-interval=10s --health-timeout=5s --health-retries=5
+          --health-cmd "redis-cli ping"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+
       - name: Set up JDK 21
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '21'
           cache: 'maven'
-      - name: Build & Test Backend
+
+      - name: Verify mvn wrapper or system mvn
+        run: |
+          if [ -f "./backend/mvnw" ]; then
+            chmod +x ./backend/mvnw || true
+            echo "Using project mvnw wrapper"
+            ./backend/mvnw -v
+          elif [ -f "./mvnw" ]; then
+            chmod +x ./mvnw || true
+            echo "Using top-level mvnw wrapper"
+            ./mvnw -v
+          else
+            echo "No mvnw wrapper found — will use system 'mvn'"
+            mvn -v
+          fi
+
+      - name: Build and Test Backend (flattened structure)
         working-directory: backend
-        run: ./mvnw -B clean test
+        env:
+          TESTCONTAINERS_DISABLED: "true"
+          SPRING_TESTCONTAINERS_ENABLED: "false"
+          REDIS_HOST: "redis"
+          REDIS_PORT: "6379"
+        run: |
+          if [ -f "./mvnw" ]; then
+            chmod +x ./mvnw || true
+            ./mvnw -B clean test
+          elif [ -f "../mvnw" ]; then
+            chmod +x ../mvnw || true
+            ../mvnw -B clean test
+          else
+            mvn -B clean test
+          fi
 
